[package]
name = 'orbweaver_r'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'orbweaver'

[dependencies]
extendr-api = { version = "0.7" }
orbweaver = { version = "0.13.0" }
#orbweaver = { git = "https://github.com/ixpantia/orbweaver-rs.git", branch = "main" }

# This will help us filter the platforms
# we support to make the final bundle size
# smaller
[package.metadata.vendor-filter]
platforms = [
    # Linux
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    # Windows
    "x86_64-pc-windows-gnu",
    # MacOS
    "x86_64-apple-darwin",
    "aarch64-apple-darwin"
]
all-features = true
